# dbt_softcenter

./: .dockerignore  .sqlfluff  .sqlfluffignore  .user.yml  Dockerfile  README.md  compose.yaml  dbt_project.yml  profiles.yml  pyproject.toml
macros/: generate_schema_name.sql
macros/tests/: test_cptit_row_count.sql  test_cptit_sum_match.sql  test_factrc_row_count.sql  test_factrc_sum_match.sql  test_frctrc_row_count.sql  test_frctrc_sum_match.sql
models/bronze/: _fn9_sources.yml  _mgp_sources.yml  _rcr_sources.yml
models/gold/: _calendario.yml  _cptit.yml  _factrc.yml  _frctrc.yml  _gold_cptit.yml  _gold_factrc.yml  _gold_frctrc.yml  _gold_tbcid.yml  _gold_tbcli.yml  _gold_tbcta.yml  _gold_tbfil.yml  _gold_tbfor.yml  _gold_tbhis.yml  _gold_tbpro.yml  _tbcid.yml  _tbcli.yml  _tbcta.yml  _tbfil.yml  _tbfor.yml  _tbhis.yml  _tbpro.yml  calendario.sql  cptit.sql  factrc.sql  frctrc.sql  gold_cptit.sql  gold_factrc.sql  gold_frctrc.sql  gold_tbcid.sql  gold_tbcli.sql  gold_tbcta.sql  gold_tbfil.sql  gold_tbfor.sql  gold_tbhis.sql  gold_tbpro.sql  tbcid.sql  tbcli.sql  tbcta.sql  tbfil.sql  tbfor.sql  (+2 more)
querys/bronze/: sources.py
querys/gold/: calendar_sql.py  calendar_yml.py  cptit_sql.py  cptit_yml.py  factrc_yml.py  frctrc_sql.py  frctrc_yml.py  sql.py  tbcli_sql.py  tbcli_yml.py  yml.py
querys/silver/: cptit.py  cptit_models.py  factrc.py  factrc_models.py  frctrc.py  frctrc_models.py  tbcid.py  tbcid_models.py  tbcli.py  tbcli_models.py  tbcta.py  tbcta_models.py  tbfil.py  tbfil_models.py  tbfor.py  tbfor_models.py  tbhis.py  tbhis_models.py  (+2 more)
src/: main.py
(+121 files in other folders)
