[project]
name = "dbt"
version = "0.1.0"
description = ""
authors = [
    {name = "Mateus Kasuya",email = "mateusvbkasuya@gmail.com"}
]
readme = "README.md"
packages = [{ include = "src" }]
requires-python = ">=3.12, <3.13"
dependencies = [
    "dbt-postgres (>=1.9.0,<2.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.group.dev.dependencies]
ruff = "^0.11.10"
taskipy = "^1.14.1"

[tool.taskipy.tasks]
fix = "ruff check . --fix"
run = "poetry run python src/main"
format = "ruff format"

