[project]
name = "dbt"
version = "0.1.0"
description = ""
authors = [
    {name = "Mateus Kasuya",email = "mateusvbkasuya@gmail.com"}
]
readme = "README.md"
packages = [
    { include = "src" },
    { include = "querys" }
    ]
requires-python = ">=3.12, <3.13"
dependencies = [
    "dbt-postgres (>=1.9.0,<2.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.group.dev.dependencies]
ruff = "^0.11.10"
taskipy = "^1.14.1"
yamlfix = "^0.7.0"
sqlfluff = "^3.4.0"

[tool.taskipy.tasks]
fix = "ruff check . --fix"
run = "set PYTHONPATH=%PYTHONPATH%;. && poetry run python src/main.py"
format = "ruff format . && find . -type f -name '*.yml' -o -name '*.yaml' | xargs yamlfix && sqlfluff fix . --dialect postgres --ignore templating --ignore target/compiled --ignore .venv"

